--- a/frontend/individual-assignment/src/scss/layout/index.scss
+++ b/frontend/individual-assignment/src/scss/layout/index.scss
@@ -1,3 +1,9 @@
+@include sm {
+  .footer {
+    padding: 10px 40px;
+  }
+}
+
 .footer {
   font-size: .6rem;
   font-weight: 100;
@@ -33,7 +39,7 @@
   padding: 0 10px;
 
   &__title {
-    color: var(--dove-gray);
+    color: $dove-gray;
     margin-bottom: 50px;
     max-width: 600px;
     line-height: 34px;
