--- a/frontend/individual-assignment/src/scss/module/forms/form-result.scss
+++ b/frontend/individual-assignment/src/scss/module/forms/form-result.scss
@@ -1,7 +1,9 @@
 .form {
   @include sm {
-    width: 200px;
-    height: 250px;
+    &__result {
+      width: 200px;
+      height: 250px;
+    }
   }
 
   &__result {
