--- a/frontend/individual-assignment/src/scss/module/_btn.scss
+++ b/frontend/individual-assignment/src/scss/module/_btn.scss
@@ -3,7 +3,7 @@
   border: none;
   padding: 10px 0;
   width: 100%;
-  color: var(--tom-thumb);
+  color: $tom-thumb;
   border-radius: 20px;
   text-transform: uppercase;
   font-weight: bold;
