feat: reestrutura do projeto

--- a/frontend/src/scss/base/index.scss
+++ b/frontend/src/scss/base/index.scss
@@ -1,14 +1,4 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'ubuntu';
-}
-
-html, body {
-  height: 100%;
-}
-
-body {
-  background-color: $concrete;
-}
+@import 'colors';
+@import 'mediaquery';
+@import 'utils';
+@import 'base';
